[tool.poetry]
name = "apod"
version = "0.1.0"
description = ""
authors = ["Jon Besga <jon-be@moving-picture.com>"]

[tool.poetry.dependencies]
python = "^3.8"
marshmallow = "^3.8.0"
Scrapy = "^2.4.0"
Pillow = "^8.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.18.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
